--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -28,16 +28,6 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .pb-70 {
         padding-bottom: 35px;
     }
-    .p-0 {
-        padding-left: 12px !important;
-        padding-right: 12px !important;
-    }
-    .pe-0 {
-        padding-right: 12px !important;
-    }
-    .ps-0 {
-        padding-left: 12px !important;
-    }
     .shape {
         display: none;
     }
@@ -62,6 +52,101 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         font-size: 16px;
     }
 
+    /** Header Area CSS
+    ======================**/
+    .header-left-content {
+        p {
+            font-size: 15px;
+        }
+    }
+    .header-right-content {
+        li {
+            a {
+                font-size: 15px;
+            }
+        }
+    }
+
+    /** Banner Area CSS
+    ======================**/
+    .banner-area {
+        padding-top: 50px;
+        padding-bottom: 90px;
+    }
+    .banner-content {
+        text-align: center;
+        margin-bottom: 30px;
+        h1 {
+            font-size: 30px;
+            margin-bottom: 30px;
+        }
+    }
+    .creative-agency {
+        position: unset;
+        p {
+            text-align: center;
+            margin: auto;
+            margin-top: 30px;
+        }
+    }
+
+    /** Brands Area CSS
+    ======================**/
+    .brands-title {
+        margin-bottom: 30px;
+        span {
+            font-size: 18px;
+        }
+    }
+
+    /** About Us Area CSS
+    ======================**/
+    .about-us-img {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .about-us-content {
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        .about-list {
+            margin-bottom: 20px;
+            li {
+                font-size: 16px;
+            }
+        }
+    }
+
+    /** Section Title Area CSS
+    ============================**/
+    .top-title {
+        font-size: 14px;
+    }
+    .section-title {
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+    }
+
+    /** Services Area CSS
+    ============================**/
+    .services-single-item {
+        padding: 25px;
+        p {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+        }
+    }
+    .services-btn {
+        margin-top: 15px;
+    }
+    
 }
 
 /* Min width 768px to Max width 991px 
@@ -84,38 +169,76 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .pb-70 {
         padding-bottom: 35px;
     }
-    .p-0 {
-        padding-left: 12px !important;
-        padding-right: 12px !important;
-    }
-    .pe-0 {
-        padding-right: 12px !important;
-    }
-    .ps-0 {
-        padding-left: 12px !important;
-    }
     .shape {
         display: none;
     }
-    .main-section-title {
-        margin: -5px auto 35px;
-        .top-title {
-            font-size: 13px;
+   
+    /** Banner Area CSS
+    ======================**/
+    .banner-area {
+        padding-top: 50px;
+        padding-bottom: 90px;
+    }
+    .banner-content {
+        text-align: center;
+        margin-bottom: 30px;
+        h1 {
+            font-size: 50px;
+            margin-bottom: 30px;
         }
-        h2 {
-            font-size: 25px;
-            line-height: normal;
-        }
-        &.left-align {
+    }
+    .creative-agency {
+        position: unset;
+        p {
             text-align: center;
+            margin: auto;
+            margin-top: 30px;
         }
     }
-    .main-btn {
-        font-size: 14px;
-        padding: 15px 30px;
+
+    /** Brands Area CSS
+    ======================**/
+    .brands-title {
+        margin-bottom: 30px;
+        span {
+            font-size: 18px;
+        }
     }
-    .main-detail-btn {
-        font-size: 16px;
+
+    /** About Us Area CSS
+    ======================**/
+    .about-us-img {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .about-us-content {
+        h2 {
+            font-size: 35px;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        .about-list {
+            margin-bottom: 20px;
+            li {
+                font-size: 16px;
+            }
+        }
+    }
+
+    /** Services Area CSS
+    ============================**/
+    .services-single-item {
+        padding: 25px;
+        p {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+        }
+    }
+    .services-btn {
+        margin-top: 15px;
     }
 
 }
@@ -124,7 +247,68 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
 <<<<=====================================================================>>>>*/ 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     
-    
+    .navbar-area {
+        .navbar-brand {
+            margin-right: 30px;
+        }
+    }
+    .main-nav {
+        .navbar {
+            .navbar-nav {
+                .nav-item {
+                    .nav-link {
+                        margin-left: 10px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+        .nav-right-options {
+            .language {
+                margin-right: 15px;
+            }
+        }
+    }
+
+    /** Banner Area CSS
+    ======================**/
+    .banner-content {
+        max-width: 650px;
+        h1 {
+            font-size: 60px;
+        }
+    }
+
+    /** About Us Area CSS
+    ======================**/
+    .about-us-img {
+        margin-right: 0;
+    }
+    .about-us-content {
+        h2 {
+            font-size: 35px;
+        }
+        p {
+            font-size: 16px;
+        }
+        .about-list {
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+    }
+
+    /** Services Area CSS
+    ============================**/
+    .services-single-item {
+        padding: 25px;
+        p {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+        }
+    }
+    .services-btn {
+        margin-top: 15px;
+    }
 
 }
 
@@ -132,12 +316,41 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
 <<<<=====================================================================>>>>*/ 
 @media only screen and (min-width: 1200px) and (max-width: 1550px) {
 
+    .navbar-area {
+        .navbar-brand {
+            margin-right: 100px;
+        }
+    }
+
+    /** Banner Area CSS
+    ======================**/
+    .banner-content {
+        max-width: 830px;
+    }
+
+    /** Services Area CSS
+    ============================**/
+    .services-single-item {
+        padding: 25px;
+        p {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+        }
+        ul {
+            li {
+                font-size: 17px;
+            }
+        }
+    }
+
 }
 
 /* Medium devices (tablets, 768px and up) Only Mobil Menu
 ===========================================================*/
 @media only screen and (max-width: 991px) {
     
+    
+
 }
 
 /* Medium devices (tablets, 768px and up) Only Mobil Menu
@@ -146,7 +359,7 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     
     /* Navbar Style
     <<<<=====================>>>>*/ 
-    .navbar-section {
+    .navbar-area {
         z-index: 2;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -228,6 +441,69 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         .main-nav {
             display: none !important;
         }
+
+        .nav-right-options {
+            position: absolute;
+            top: 7px;
+            right: 45px;
+            .language {
+                padding-left: 0;
+                margin-bottom: 0;
+                list-style: none;
+                position: relative;
+                padding-left: 22px;
+                margin-right: 35px;
+                .form-select {
+                    padding: 0;
+                    padding-right: 20px;
+                    background-color: transparent;
+                    background-position: right -4px center;
+                    border: none;
+                    font-size: 15px;
+                    font-weight: 500;
+                    color: $white-color;
+                    cursor: pointer;
+                    background-image: url(../../assets/images/arrow-down.svg);
+                    &:focus {
+                        box-shadow: none;
+                    }
+                    option {
+                        color: $heading-color;
+                    }
+                }
+                i {
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    left: 0;
+                    font-size: 16px;
+                    color: $white-color
+                }
+            }
+        }
+    }
+    .mean-container {
+        .mean-nav {
+            ul {
+                li {
+                    a {
+                        &.mean-expand {
+                            top: -6px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+@media only screen and (min-width: 1400px) {
+
+    .mw-1680 {
+        max-width: 1680px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
 }
