--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,12 +99,14 @@ img {
 	background-color: $white-color;
 	color: $heading-color;
 	border-radius: $border-radius;
-	font-size: 14px;
+	font-size: 18px;
 	padding: 10px 20px;
 	width: 100%;
 	transition: $transition;
+	border-radius: 4px;
 	&::placeholder {
-		color: #959ca9;
+		color: #B9B9B9;
+		font-size: 18px;
 	}
 	&:focus {
 		color: $black-color;
@@ -1209,7 +1211,7 @@ textarea {
 }
 
 /*
-16 - About Us Style
+17 - About Us Style
 <<<<======================================================>>>>*/
 .about-us-content {
 	max-width: 665px;
@@ -1256,6 +1258,9 @@ textarea {
 	margin-right: 76px;
 }
 
+/*
+18 - Services Style
+<<<<======================================================>>>>*/
 .services-single-item {
 	border-radius: 10px;
 	background-color: #111;
@@ -1323,5 +1328,414 @@ textarea {
 				border-color: $main-color;
 			}
 		}
+	}
+}
+
+/*
+19 - who-we-are Style
+<<<<======================================================>>>>*/
+.who-we-are-content {
+	h2 {
+		font-size: 48px;
+		margin-bottom: 25px;
+		line-height: 1.222;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	p {
+		margin-bottom: 30px;
+		font-size: 18px;
+		font-weight: 600;
+	}
+	.skill-bar {
+		margin-bottom: 20px;
+		.progress-title-holder {
+			position: relative;
+		}
+		.progress-title {
+			font-size: 15px;
+			font-weight: 600;
+			margin-bottom: 15px;
+			display: block;
+			color: $heading-color;
+		}
+		.progress-number-wrapper {
+			width: 100%;
+			z-index: 10;
+			font-size: 11px;
+			line-height: 24px;
+			height: 24px;
+			letter-spacing: 0px;
+			font-weight: 600;
+			font-style: normal;
+			text-transform: none;
+			color: $white-color;
+		}
+		.progress-number-mark {
+			margin-bottom: 4px;
+			border-radius: 3px;
+			color: $heading-color;
+			padding: 0 8px;
+			position: absolute;
+			bottom: 0;
+			transform: translateX(-50%);
+			font-size: 16px;
+			font-weight: 600;
+		}
+		.down-arrow {
+			border: 3px solid $main-color;
+			position: absolute;
+			left: 66%;
+    		top: 147%;
+			height: 20px;
+			width: 20px;
+			border-radius: 50px;
+			transform: translateX(-50%);
+		}
+		.progress-content-outter {
+			height: 6px;
+			background-color: #f5f5f5;
+			border-radius: 50px;
+		}
+		.progress-content {
+			height: 6px;
+			background-color: $main-color;
+			width: 0%;
+			border-radius: 50px;
+		}
+	}
+}
+.who-we-are-img {
+	margin-left: 71px;
+	img {
+		border-radius:10px 325px 325px 10px;
+	}
+}
+
+/*
+20 - Testimonial Style
+<<<<======================================================>>>>*/
+.testimonial-single-item {
+	position: relative;
+	padding-left: 100px;
+	.quat {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		z-index: -1;
+	}
+	.testimonial-img {
+		border-radius: 300px;
+		width: 250px;
+		height: 250px;
+	}
+	p {
+		font-size: 25px;
+		font-weight: 600;
+		color: $heading-color;
+		margin-bottom: 30px;
+	}
+	h4 {
+		margin-bottom: 0;
+		font-weight: 400;
+		font-size: 16px;
+		span {
+			color: $body-color;
+		}
+	}
+}
+.testimonial-slide {
+	&.owl-carousel {
+		.owl-item {
+			img {
+				width: auto;
+			}
+		}
+	}
+	&.owl-theme {
+		.owl-nav {
+			margin-top: 0 !important;
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			.owl-prev, .owl-next {
+				background-color: transparent;
+				width: 50px;
+				height: 50px;
+				line-height: 50px;
+				border: 1px solid rgba(253, 98, 25, 0.15);
+				border-radius: 50px;
+				color: $body-color;
+				transition: $transition;
+				&:hover {
+					background-color: $main-color;
+					color: $white-color;
+					border-color: $main-color;
+				}
+			}
+		}
+	}
+}
+
+/*
+21 - case study Style
+<<<<======================================================>>>>*/
+.case-study-content-wrap {
+	.slider {
+		list-style: none;
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		flex-wrap: nowrap;
+		width: 100%;
+		height: 660px;
+		margin: 0 auto;
+		padding: 0;
+		li {
+			position: relative;
+			min-height: 100%;
+			overflow: hidden;
+			flex-grow: 1;
+			transition: $transition;
+			&:hover {
+				flex-grow: 2;
+				.case-study-content {
+					opacity: 1;
+				}
+			}
+		}
+		h1 {
+			position: absolute;
+			top: 40px;
+			left: 40px;
+			margin: 0;
+			font-size: 48px;
+			color: rgba(255, 255, 255, 0.7);
+			text-transform: uppercase;
+			transform-origin: left top;
+		}
+		a {
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+			.case-study-content {
+				position: absolute;
+				right: 40px;
+				left: 40px;
+				bottom: 40px;
+				transition: $transition;
+				width: 335px;
+				opacity: 0;
+				span {
+					background-color: $heading-color;
+					padding: 15px;
+					color: $white-color;
+					display: inline-block;
+				}
+				h4 {
+					font-size: 20px;
+					padding: 15px;
+					background-color: $main-color;
+					color: $white-color;
+					display: inline-block;
+				}
+			}
+		}
+	}
+}
+
+/*
+22 - FAQ Style
+<<<<======================================================>>>>*/
+.faq-img {
+	margin-bottom: 60px;
+}
+.accordion {
+	&.accordion-content {
+		.accordion-item {
+			border: none;
+			border-bottom: 1px solid #F4F4F4;
+			padding-top: 30px;
+			padding-bottom: 30px;
+			.accordion-header {
+				.accordion-button {
+					padding: 0;
+					color: $heading-color;
+					font-size: 20px;
+					font-weight: 700;
+					.count {
+						width: 55px;
+						height: 55px;
+						line-height: 55px;
+						text-align: center;
+						border: 1px solid $heading-color;
+						border-radius: 50px;
+						margin-right: 30px;
+						display: inline-block;
+					}
+					&:focus {
+						box-shadow: none;
+					}
+					&::after {
+						content: "\2b";
+						background-image: unset;
+						font-size: 25px;
+						position: relative;
+						top: -7px;
+					}
+					&:not(.collapsed) {
+						background-color: transparent;
+						box-shadow: none;
+						&::after {
+							content: "\f068";
+							font-family: "Font Awesome 6 Pro";
+							font-size: 20px;
+							position: unset;
+						}
+					}
+				}
+			}
+			&:last-of-type {
+				border-radius: 0;
+			}
+			.accordion-body {
+				padding-left: 85px;
+				padding-top: 15px;
+				p {
+					font-size: 18px;
+					font-weight: 600;
+				}
+			}
+			&:first-child {
+				padding-top: 0;
+			}
+		}
+	}
+}
+
+/*
+22 - Appointment Style
+<<<<======================================================>>>>*/
+.appointment-form {
+	.form-group {
+		margin-bottom: 25px;
+		.form-control {
+			background-color: #111111;
+			border-color: #111111;
+			color: $white-color;
+			font-size: 18px;
+			&::placeholder {
+				font-size: 18px;
+				font-weight: 600;
+			}
+			&:focus {
+				border-color: $main-color;
+			}
+		}
+	}
+}
+
+/*
+22 - Footer Style
+<<<<======================================================>>>>*/
+.footer-single-item {
+	margin-bottom: 25px;
+	p {
+		font-size: 18px;
+		font-weight: 600;
+		margin-bottom: 30px;
+	}
+	.logo {
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+	.social-link {
+		li {
+			display: inline-block;
+			margin-right: 6px;
+			&:last-child {
+				margin-right: 0;
+			}
+			a {
+				display: inline-block;
+				width: 40px;
+				height: 40px;
+				line-height: 40px;
+				border: 1px solid rgba(253, 98, 25, 0.15);
+				text-align: center;
+				font-size: 20px;
+				color: $heading-color;
+				&:hover {
+					background-color: $main-color;
+					border-color: $main-color;
+					color: $white-color;
+				}
+			}
+		}
+	}
+	h3 {
+		font-size: 20px;
+		margin-bottom: 30px;
+	}
+	.useful-link {
+		padding-left: 0;
+		margin-bottom: 0;
+		list-style: none;
+		li {
+			margin-bottom: 8px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			a {
+				font-size: 18px;
+				text-decoration: none;
+			}
+		}
+	}
+	.contact-info {
+		padding-left: 0;
+		margin-bottom: 0;
+		list-style: none;
+		li {
+			margin-bottom: 10px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			a {
+				font-size: 18px;
+				font-weight: 600;
+				text-decoration: none;
+				&:hover {
+					color: $heading-color;
+				}
+			}
+		}
+	}
+	.form-control {
+		background-color: #F4F4F4;
+		border-color: #F4F4F4;
+	}
+	.send-btn {
+		font-size: 24px;
+		color: $main-color;
+		margin-right: 20px;
+	}
+}
+.copy-right {
+	border-top: 1px solid #F4F4F4;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	font-weight: 600;
+	font-size: 18px;
+	text-align: center;
+	span {
+		color: $main-color;
 	}
 }
